--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <title>ALURAFLIX</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
 
-    <header>ALURAFLIX</header>
 
+     <header>ALUAFLIX</header>
+     <section>
     <h1>planeta dos macacos a origem </h1>
     <p>macacos com armas</p>
+    </div>
+    <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tb-xfRR-ig8?si=V9urTu8rKXwzkuUf"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
-
-
+     <div>
+   </section>
+</body>
 
 
     <body>
